crates/toml/tests/snapshots/invalid/key/no-eol-06.stderr
TOML parse error at line 1, column 6
  |
1 | 0=0r0=0r=false
  |      ^
unexpected key or value, expected newline, `#`
